...
                keyboardType = KeyboardType.Password,
                imeAction = ImeAction.Done,
                onTextChange = { password = it },
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(vertical = LoginTheme.dimens.Space8)
                    .testTag("password_text_field")
            )
            Button(
                onClick = { onLogin(email, password) },
                shape = RoundedCornerShape(20),
                enabled = email.isNotEmpty() && password.isNotEmpty(),
                modifier = Modifier
...
